--- a/styles/_global.less
+++ b/styles/_global.less
@@ -1,4 +1,12 @@
+@color-main: #0A594B;
+@color-secondary: #074035;
+@color-third: #067302;
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  background-color: red;
-  
+  font-family: 'Montserrat', sans-serif, Helvetica;
+  color: #0D0D0D;
 }
