--- a/styles/_header.less
+++ b/styles/_header.less
@@ -1,4 +1,144 @@
 header {
-  background-color: #666;
-  height: 100px;
+
+  .logo {
+    width: 200px;
+    height: 65px;
+    display: block;
+    background-image: url(../../images/logo_tcc.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  .navbar {
+    background-color:#fff;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+
+    .container {
+      justify-content: flex-start;
+    }
+
+    .navbar-toggler {
+      margin-right: 15px;
+      border:0;
+      padding-left: 0;
+      &:focus {
+        outline: 0;
+        color: #000;
+      }
+    }
+
+    .navbar-nav {
+      .nav-link {
+        color: #0D0D0D;
+        position: relative;
+        margin: .5rem 1rem;
+        padding: 0;
+
+        &:after {
+          position: absolute;
+          content: '';
+          display: block;
+          height: 1px;
+          background-color: @color-main;
+          width: 0;
+          left: 0;
+          bottom: 0;
+          transition: all 0.15s ease;
+        }
+
+        &:hover {
+          color: @color-main;
+          &:after {
+            width: 100%;
+          }
+        }
+      }
+
+      .menu-close {
+        position: absolute;
+        right: 0;
+        top: 0;
+
+        button {
+          font-size: 2.2rem;
+        }
+      }
+    }
+
+  }
+
+  .language {
+    margin-left: 70px;
+    a {
+      font-size: 0.8rem;
+      display: flex;
+      &:after {
+        display: none !important;
+      }
+      i {
+        font-size: 1.2rem;
+        margin-right: 3px;
+        transition: all 1s ease;
+      }
+    }
+  }
+
+  /*.language {
+    margin-left: 20px;
+    button {
+      display: flex;
+      align-items: center;
+      background-color: @color-main;
+      &:after {
+        display: none;
+      }
+      i {
+        margin-left: 5px;
+      }
+    }
+    .dropdown-menu {
+      min-width: auto;
+      max-width: 100%;
+    }
+  }*/
+
+  @media (max-width: 992px) {
+      .navbar-collapse.collapsing .navbar-nav {
+          display: block;
+          position: fixed;
+          top: 0;
+          bottom: 0;
+          left: -75%;
+          transition: all 0.2s ease;
+      }
+
+      .navbar-collapse.show .navbar-nav {
+          position: fixed;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          flex-direction: column;
+          height: auto;
+          width: 75%;
+          transition: left 0.35s ease;
+          box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+          background: #fff;
+          z-index: 9999;
+
+          .nav-item {
+            &.language {
+              padding-left: 1rem;
+              margin-top: .8rem;
+              margin-left: 0;
+              a {
+                padding: 0 .2rem;
+              }
+            }
+          }
+      }
+
+
+  }
+
 }
