Header + Footer + sección Instalaciones

--- a/styles/_global.less
+++ b/styles/_global.less
@@ -1,12 +1,15 @@
 @color-main: #0A594B;
 @color-secondary: #074035;
 @color-third: #067302;
+@main-font: 'Montserrat', sans-serif, Helvetica;
+@secondary-font: 'Lato', sans-serif, Helvetica;
 
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif, Helvetica;
+  font-family: @main-font;
   color: #0D0D0D;
+  font-size: 16px;
 }
