--- a/styles/_footer.less
+++ b/styles/_footer.less
@@ -3,13 +3,41 @@ footer {
   color: #fff;
 
   .footer-top {
-    padding: 20px 0;
+    padding: 35px 0;
+    .location {
+      font-size: 18px;
+      margin-left: 30px;
+      font-weight: 600;
+    }
+    a {
+      color: #fff;
+      font-weight: 600;
+    }
+    i {
+      float: left;
+      margin: 2px 10px 0px 0;
+      font-size: 21px;
+      opacity: 0.5;
+    }
+
+    .footer-nav {
+        list-style: none;
+        border-left: 1px solid rgba(255, 255, 255, 0.2);
+        padding-left: 30px;
+        li {
+          display: block;
+          a {
+            font-size: 14px;
+          }
+        }
+    }
+
   }
 
   .footer-bottom {
     .container {
       display: flex;
-      justify-content:  space-between;
+      justify-content: center;
       align-items: center;
     }
     font-size: 0.7rem;
@@ -17,6 +45,8 @@ footer {
 
     .back-to-top {
       color: #fff;
+      position: absolute;
+      right: 2vw;
       i {
         font-size: 3.5em;
       }
@@ -29,11 +59,39 @@ footer {
 
   @media (max-width: 991px) {
 
-      .footer-bottom {
-        .rights {
-          display: block;
+      .footer-top {
+        .footer-nav {
+          border: 0;
+          margin-top: 30px;
+          position: relative;
+          &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            height: 1px;
+            background-color: rgba(255, 255, 255, 0.2);
+            top: -20px;
+            width: auto;
+            left: 30px;
+            right: 15px;
+          }
         }
       }
+
+  } //End MQ
+
+  @media (max-width: 767px) {
+
+    .footer-bottom {
+      .rights {
+        display: block;
+      }
+      .back-to-top {
+        i {
+          font-size: 3em;
+        }
+      }
+    }
 
   } //End MQ
 
