--- a/styles/_sections.less
+++ b/styles/_sections.less
@@ -1,8 +1,11 @@
 main {
-  height: 800px;
   padding-top: 80px;
+  @media (max-width: 992px) {
+    padding-top: 66px;
+  }
 }
 
+//-------------HOME--------------------------
 .home {
 
   .carousel {
@@ -19,12 +22,12 @@ main {
         object-fit: cover;
       }
       .carousel-caption {
-        background: rgba(0, 0, 0, 0.2);
-        bottom: 10% !important;
+        background: rgba(7, 64, 53, 0.6);
+        bottom: 12% !important;
         padding: 20px;
         margin-left: auto;
         margin-right: auto;
-        width: 45%;
+        width: 48%;
         max-width: 650px;
 
         h2 {
@@ -34,6 +37,8 @@ main {
 
         h5 {
           font-size: 2em;
+          font-family: @secondary-font;
+          font-weight: 400;
         }
 
         p {
@@ -41,6 +46,72 @@ main {
         }
       }
     }
+  }
+
+  &-heading {
+
+    padding: 60px 0 45px;
+    h2 {
+      line-height: 1.2;
+      margin: 0 auto;
+      font-size: 2.2em;
+      font-weight: 600;
+      position: relative;
+    }
+    .know-more {
+      text-align: center;
+      a {
+        border: 2px solid @color-main;
+        background-color: @color-main;
+        color: #fff;
+        display: inline-block;
+        padding: 10px 20px;
+        border-radius: .4em;
+        font-weight: 600;
+        margin-top: 30px;
+        text-transform: capitalize;
+        text-decoration: none;
+        &:hover {
+          background: #fff;
+          color: @color-main;
+        }
+      }
+    }
+
+  }
+
+  &-features {
+    .features-container {
+      margin: 50px 0 70px;
+      .item {
+        width: 270px;
+        margin: 0 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        figure {
+          width: 150px;
+          height: 150px;
+          border-radius: 100%;
+          margin-bottom: 20px;
+          padding: 25px;
+          border: 2px solid @color-secondary;
+          img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+          }
+        }
+        h4 {
+          font-weight: 600;
+          font-size: 1.35em;
+          span {
+            color: @color-third;
+          }
+        }
+      }
+    }
+
   }
 
   @media (max-width: 992px) {
@@ -55,17 +126,169 @@ main {
           top: 30px;
           bottom: auto !important;
           width: auto;
-          left: 30px;
-          right: 30px;
+          left: 15px;
+          right: 15px;
           padding: 10px;
 
           h5 {
-            font-size: 1em;
+            font-size: 1.3em;
           }
           p {
             font-size: 13px;
           }
         }
+      }
+    }
+
+    &-heading {
+      padding: 30px 0;
+      h2 {
+        font-size: 1.5em;
+      }
+    }
+
+    &-features {
+      .features-container {
+        .item {
+          width: 100%;
+          margin: 0 0 30px 0;
+          h4 {
+            max-width: 90%;
+          }
+        }
+      }
+    }
+
+  } //End MQ
+
+}
+
+//--------------INSTALACIONES------------------------
+.instalaciones {
+  .banner {
+    height: 200px;
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    background-image: url('../../images/banner_instalaciones.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+    margin-bottom: 50px;
+    position: relative;
+    &:before {
+      display: block;
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      opacity: 0.7;
+      background-color: @color-secondary;
+    }
+    h2 {
+      color: #fff;
+      font-family: @secondary-font;
+      font-weight: 400;
+      font-size: 2.5rem;
+      position: relative;
+      z-index: 4;
+    }
+  }
+  .box-instalaciones {
+    flex: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    h2 {
+      font-family: @secondary-font;
+      margin-bottom: 1rem;
+    }
+    .lead {
+      font-weight: 400;
+      font-size: 1.4em;
+      span {
+        font-weight: 600;
+      }
+    }
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      opacity: 0.7;
+    }
+    &> div {
+      position: relative;
+      z-index: 2;
+    }
+    &.bg-green {
+      &:before {
+        background-color: @color-secondary;
+      }
+    }
+    &.bg-gray {
+      &:before {
+        background-color: #333;
+      }
+    }
+    &.box-puerto {
+      background-image: url('../../images/puerto.jpg');
+    }
+    &.box-almacenamiento {
+      background-image: url('../../images/almacenamiento.jpg');
+    }
+    &.box-operaciones {
+      background-image: url('../../images/area-operaciones.jpg');
+    }
+    &.box-terreno {
+      background-image: url('../../images/terreno.jpg');
+    }
+  }
+
+  @media (max-width: 992px) {
+    .banner {
+      padding: 0;
+      height: 140px;
+      h2 {
+        font-size: 2rem;
+        text-align: center;
+      }
+    }
+    .box-instalaciones {
+      .lead {
+        font-size: 1rem;
+      }
+      h2 {
+        font-size: 1.7rem;
+      }
+    }
+
+  } //End MQ
+
+  @media (max-width: 767px) {
+    .box-instalaciones {
+      margin: 15px;
+    }
+    .row-2 {
+      display: flex;
+      flex-direction: column;
+      .box-terreno {
+        order: 0;
+        margin-top: 0;
+      }
+      .box-almacenamiento {
+        order: 1;
+        margin-top: 0;
       }
     }
 
