--- a/styles/_footer.less
+++ b/styles/_footer.less
@@ -39,6 +39,7 @@ footer {
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative;
     }
     font-size: 0.7rem;
     background-color: @color-secondary;
@@ -46,7 +47,7 @@ footer {
     .back-to-top {
       color: #fff;
       position: absolute;
-      right: 2vw;
+      right: 0;
       i {
         font-size: 3.5em;
       }
