--- a/styles/_sections.less
+++ b/styles/_sections.less
@@ -10,11 +10,20 @@ main {
   display: flex;
   align-items: center;
   padding: 30px 0;
-  background-image: url('../../images/banner_instalaciones.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center top;
   margin-bottom: 50px;
+  background-position: center center;
+  &.banner-instalaciones {
+    background-position: center bottom;
+    background-image: url('../../images/banner_instalaciones.jpg');
+  }
+  &.banner-nosotros {
+    background-image: url('../../images/banner_nosotros.jpg');
+  }
+  &.banner-servicios {
+    background-image: url('../../images/banner_servicios.jpg');
+  }
   h2 {
     color: #fff;
     font-family: @secondary-font;
@@ -23,11 +32,11 @@ main {
     position: relative;
     display: inline-block;
     padding: 20px 30px 20px 0;
-    background: rgba(0,0,0,0.2);
+    background: rgba(7,64,53,0.6);
     &:before {
       content: '';
       display: block;
-      background: rgba(0,0,0,0.2);
+      background: rgba(7,64,53,0.6);
       height: 100%;
       left: -300%;
       position: absolute;
@@ -86,6 +95,7 @@ main {
 
         p {
           margin: 0;
+          line-height: 1.3;
         }
       }
     }
@@ -164,10 +174,13 @@ main {
       .carousel-inner {
         height: 300px;
       }
+      .carousel-indicators {
+          top: 3vw;
+          bottom: auto;
+      }
       .carousel-item {
         .carousel-caption {
-          top: 30px;
-          bottom: auto !important;
+          bottom: 5% !important;
           width: auto;
           left: 15px;
           right: 15px;
@@ -178,6 +191,11 @@ main {
           }
           p {
             font-size: 13px;
+          }
+        }
+        &.tank-slide {
+          img {
+            object-position: center right;
           }
         }
       }
@@ -301,47 +319,97 @@ main {
 //----------------- SERVICIOS -----------------/
 .services {
     margin-bottom: 50px;
-    h2.display-4 { padding-left: 30%!important;font-family: @secondary-font; font-weight: 300;}
-    .p-md-5 {padding: 6rem 0 6rem 0 !important;}
-    .p-md-5 {margin-top: 80px!important;}
-    .srv{font-size: 16px; text-align: left;width: 235px; margin: 0 auto;}
-    p {font-size: 18px; line-height: 2rem;}
-
-    /* modulo 2 columnas */
-    h3{font-size:2.5rem; font-family: "Lato", sans-serif;}
-    .lead{font-size:18px; font-weight: 400;line-height: 2rem;}
-    .bg-light {background-color: #efefef !important;}
-
-    .shadow-sm{box-shadow:0 .125rem .25rem rgba(0,0,0,.075)!important; max-width: 100%;}
-
-    @media (min-width: 768px){
-      .flex-md-equal > *{-ms-flex:1;flex:1;}
-    }
-
-    @media (max-width: 767px){
-      .flex-md-equal .bg-light{margin: 15px;}
-      h3 {
-          font-size: 2.2rem;
-          font-family: "Lato",sans-serif;
+    .services-wrapper {
+      img {
+        border-radius: 15px 15px 0 0;
+        max-width: 100%;
       }
+      .bg-light {
+        background-color: #efefef !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+      }
+      p {
+        font-size: 20px;
+        line-height: 1.8rem;
+        max-width: 650px;
+      }
+      h2 {
+        padding-left: 30% !important;
+        font-family: @secondary-font;
+        font-weight: 300;
+      }
+      .srv {
+        font-size: 19px;
+        text-align: left;
+        width: 260px;
+        margin: 0 auto;
+      }
+       h3 {
+         font-size: 2.3rem;
+         font-family: @secondary-font;
+         margin-bottom: 1rem;
+         font-weight: 400;
+       }
     }
+
+    @media (min-width: 768px) {
+      .flex-md-equal > *{
+        flex:1;
+      }
+    } //End MQ
+
+    @media (max-width: 767px) {
+      .flex-md-equal .bg-light {
+        margin: 15px;
+      }
+      .services-wrapper {
+        h3 {
+          font-size: 2rem;
+        }
+        p, .srv {
+          font-size: 1rem;
+        }
+      }
+
+    } //End MQ
 
   }
 
 //----------------- NOSOTROS -----------------/
 .about-us {
 
-  h2.display-4 {padding-left: 30%!important;font-family: "Lato", sans-serif;font-weight: 300;}
-  .banner{ background-image: url('../../images/banner2.png') !important; background-size: auto;}
-  .p-md-5 { padding: 6rem 0 6rem 0 !important;}
-  .p-md-5 { margin-top: 80px!important;}
-  .highlight {color:@color-third!important; font-size: 30px!important}
-  p {font-size: 18px; line-height: 2rem;}
-
-  @media only screen and (min-width: 601px){
-    .row .col.m6{width:50%;margin-left:auto;left:auto;right:auto;}
+  p {
+    font-size: 18px;
+    line-height: 2rem;
+    span {
+      color: @color-third!important;
+      font-size: 30px;
+    }
   }
-  .black-text{color:#494747!important;}
-  .col{margin-bottom:30px;margin-top:30px!important;}
+
+  iframe {
+    max-width: 100%;
+  }
+
+  @media screen and (max-width: 767px){
+    .col-md-6 {
+      margin-bottom: 0;
+      margin-top: 10px!important;
+      br {
+        display: none;
+      }
+    }
+    p {
+      font-size: 1rem;
+      line-height: 1.6rem;
+      span {
+        font-size: 20px;
+      }
+    }
+
+  } //End MQ
 
 }
