--- a/styles/_footer.less
+++ b/styles/_footer.less
@@ -12,6 +12,9 @@ footer {
     a {
       color: #fff;
       font-weight: 600;
+      &:focus {
+        text-decoration: underline;
+      }
     }
     i {
       float: left;
