--- a/styles/_global.less
+++ b/styles/_global.less
@@ -6,11 +6,15 @@
 
 html {
   scroll-behavior: smooth;
-  font-family: sans-serif;
+  font-family: sans-serif, Arial, Helvetica;
 }
 
 body {
   font-family: @main-font;
   color: #0D0D0D;
   font-size: 16px;
+}
+
+a:focus {
+  outline: 0;
 }
