--- a/styles/_header.less
+++ b/styles/_header.less
@@ -47,8 +47,9 @@ header {
           transition: all 0.15s ease;
         }
 
-        &:hover {
+        &:hover, &:focus {
           color: @color-main;
+          outline: 0;
           &:after {
             width: 100%;
           }
@@ -64,9 +65,13 @@ header {
         top: 0;
 
         button {
-          font-size: 2.2rem;
+          font-size: 2.3rem;
           position: relative;
           z-index: 9999;
+          &:focus {
+            outline: 0;
+            color: @color-main;
+          }
         }
       }
     }
