--- a/styles/_sections.less
+++ b/styles/_sections.less
@@ -60,6 +60,11 @@ main {
 //-------------HOME--------------------------
 .home {
 
+  span {
+    color: @color-third!important;
+    font-size: 30px;
+  }
+
   .carousel {
     height: 600px;
 
@@ -156,7 +161,7 @@ main {
           }
         }
         h4 {
-          font-weight: 600;
+          font-weight: 400;
           font-size: 1.35em;
           span {
             color: @color-third;
@@ -324,6 +329,9 @@ main {
         border-radius: 15px 15px 0 0;
         max-width: 100%;
       }
+      .bg-darker {
+        background-color: #e0eae8 !important;
+      }
       .bg-light {
         background-color: #efefef !important;
         display: flex;
@@ -381,6 +389,8 @@ main {
 //----------------- NOSOTROS -----------------/
 .about-us {
 
+
+  p.text-bigger{font-size: 20px!important}
   p {
     font-size: 18px;
     line-height: 2rem;
@@ -407,10 +417,9 @@ main {
       font-size: 1rem;
       line-height: 1.6rem;
       span {
-        font-size: 20px;
+        font-size: 23px;
       }
     }
-
   } //End MQ
 
 }
