--- a/styles/_sections.less
+++ b/styles/_sections.less
@@ -38,9 +38,9 @@ main {
       display: block;
       background: rgba(7,64,53,0.6);
       height: 100%;
-      left: -300%;
+      left: -1500%;
       position: absolute;
-      width: 300%;
+      width: 1500%;
       top: 0;
     }
   }
@@ -55,15 +55,16 @@ main {
       }
   } //End MQ
 
+  @media (min-width: 1920px) {
+    &.banner-instalaciones {
+      background-position: center center;
+    }
+  }
+
 }
 
 //-------------HOME--------------------------
 .home {
-
-  span {
-    color: @color-third!important;
-    font-size: 30px;
-  }
 
   .carousel {
     height: 600px;
@@ -165,6 +166,7 @@ main {
           font-size: 1.35em;
           span {
             color: @color-third;
+            font-size: 30px;
           }
         }
       }
@@ -330,7 +332,7 @@ main {
         max-width: 100%;
       }
       .bg-darker {
-        background-color: #e0eae8 !important;
+        background-color: #e0eae8;
       }
       .bg-light {
         background-color: #efefef !important;
@@ -389,10 +391,8 @@ main {
 //----------------- NOSOTROS -----------------/
 .about-us {
 
-
-  p.text-bigger{font-size: 20px!important}
   p {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 2rem;
     span {
       color: @color-third!important;
@@ -400,12 +400,18 @@ main {
     }
   }
 
+  hr.separator {
+    max-width: 85%;
+    margin: 0 auto;
+  }
+
   iframe {
     max-width: 100%;
     border: 0;
+    padding-bottom: 10px;
   }
 
-  @media screen and (max-width: 767px){
+  @media screen and (max-width: 767px) {
     .col-md-6 {
       margin-bottom: 0;
       margin-top: 10px!important;
@@ -414,11 +420,17 @@ main {
       }
     }
     p {
-      font-size: 1rem;
-      line-height: 1.6rem;
+      font-size: 1.1rem;
+      line-height: 1.7rem;
       span {
         font-size: 23px;
       }
+    }
+    hr.separator {
+      max-width: 92%;
+    }
+    iframe {
+      max-height: 300px;
     }
   } //End MQ
 
