--- a/styles/_sections.less
+++ b/styles/_sections.less
@@ -221,7 +221,7 @@ main {
           width: 100%;
           margin: 0 0 30px 0;
           h4 {
-            max-width: 90%;
+            max-width: 80%;
           }
         }
       }
@@ -331,15 +331,17 @@ main {
         border-radius: 15px 15px 0 0;
         max-width: 100%;
       }
+      .box-services {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+      }
       .bg-darker {
         background-color: #e0eae8;
       }
       .bg-light {
         background-color: #efefef !important;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
       }
       p {
         font-size: 20px;
@@ -372,7 +374,7 @@ main {
     } //End MQ
 
     @media (max-width: 767px) {
-      .flex-md-equal .bg-light {
+      .flex-md-equal .box-services {
         margin: 15px;
       }
       .services-wrapper {
