--- a/styles/_sections.less
+++ b/styles/_sections.less
@@ -437,3 +437,16 @@ main {
   } //End MQ
 
 }
+
+//------- English version --------------
+.eng {
+
+  @media (max-width: 767px) {
+    .item-truck {
+      h4 {
+        max-width: 74% !important;
+      }
+    }
+  } //End MQ
+
+}
