--- a/styles/_footer.less
+++ b/styles/_footer.less
@@ -18,7 +18,7 @@ footer {
     }
     i {
       float: left;
-      margin: 2px 10px 0px 0;
+      margin: 1px 10px 0px 0;
       font-size: 21px;
       opacity: 0.5;
     }
@@ -94,6 +94,16 @@ footer {
         i {
           font-size: 3em;
         }
+      }
+    }
+
+  } //End MQ
+
+  @media (min-width: 411px) and (max-width: 575px) {
+
+    .footer-top {
+      .location-icon {
+        margin-bottom: 30px !important;
       }
     }
 
