--- a/styles/_sections.less
+++ b/styles/_sections.less
@@ -394,11 +394,37 @@ main {
 .about-us {
 
   p {
-    font-size: 20px;
-    line-height: 2rem;
+    font-size: 19px;
+    line-height: 1.5;
     span {
       color: @color-third!important;
-      font-size: 30px;
+      font-size: 24px;
+    }
+  }
+
+  .director {
+    img {
+      border: 3px inset @color-secondary;
+    }
+    h3 {
+      font-family: @secondary-font;
+      color: @color-main;
+      font-size: 2.6em;
+    }
+    h4 {
+      font-family: @secondary-font;
+      color: @color-third;
+      font-size: 1.9em;
+    }
+    .mail-director {
+      margin-top: 12px;
+      i {
+        color: @color-main;
+        margin-right: 8px;
+      }
+      a {
+        color: @color-main;
+      }
     }
   }
 
@@ -406,6 +432,29 @@ main {
     max-width: 100%;
     border: 0;
     padding-bottom: 10px;
+  }
+
+  @media screen and (max-width: 991px) {
+    .director {
+      img {
+        margin: 0 auto 20px;
+        max-width: 100%;
+      }
+      h3 {
+        text-align: center;
+        font-size: 2em;
+      }
+      h4 {
+        text-align: center;
+        font-size: 1.5em;
+      }
+      .director-text {
+        .mail-director {
+          justify-content: center;
+        }
+        text-align: center;
+      }
+    }
   }
 
   @media screen and (max-width: 767px) {
